--- a/watch.html
+++ b/watch.html
@@ -213,11 +213,19 @@ if (!id) {
 
               function parseTime(t) {
                 const parts = t.split(":");
+              if (parts.length === 3) {
                 const h = parseInt(parts[0]);
                 const m = parseInt(parts[1]);
                 const s = parseFloat(parts[2]);
                 return h * 3600 + m * 60 + s;
+              } else if (parts.length === 2) {
+                const m = parseInt(parts[0]);
+                const s = parseFloat(parts[1]);
+                return m * 60 + s;
+              } else {
+                return parseFloat(t); // fallback
               }
+            }
 
               video.addEventListener("timeupdate", () => {
                 if (!subtitleEnabled || subtitles.length === 0) {
@@ -296,3 +304,4 @@ function copyCode() {
 </script>
 </body>
 </html>
+
