--- a/watch.html
+++ b/watch.html
@@ -35,16 +35,16 @@
       position: relative;
       width: 100%;
       max-width: 640px;
-      margin: 0 auto;
     }
 
     .subtitle {
       position: absolute;
       bottom: 5%;
-      left: 50%;
-      transform: translateX(-50%);
+      left: 0;
+      transform: none;
+      margin-left: 10px;
       max-width: 90%;
-      text-align: center;
+      text-align: left;
       font-size: 1.5em;
       color: white;
       background-color: rgba(0, 0, 0, 0.6);
@@ -60,6 +60,8 @@
     :-webkit-full-screen .subtitle {
       font-size: 2em;
       bottom: 8%;
+      left: 0;
+      margin-left: 10px;
     }
 
     .subtitle-controls {
@@ -206,127 +208,74 @@ if (!id) {
               const subtitleDiv = document.getElementById("subtitle");
               const langSelect = document.getElementById("subtitleLang");
               const toggleBtn = document.getElementById("toggleSubtitle");
-
               let subtitles = [];
+              let currentLang = "";
               let subtitleEnabled = true;
 
-              function loadSubtitle(lang) {
-                const sub = info.subtitles.find(s => s.language === lang);
-                if (!sub) return;
-                const langOnly = sub.fileName.replace(".vtt", "");
-                fetch(`${SERVER}/subtitles/${id}/${langOnly}`)
-                  .then(res => res.ok ? res.text() : "")
-                  .then(text => {
-                    subtitles = parseVTT(text);
-                  });
-              }
-
-              function parseVTT(vttText) {
-                vttText = vttText.replace(/\r\n/g, "\n").trim();
-                const entries = [];
-                const blocks = vttText.split(/\n\n+/);
-                for (const block of blocks) {
-                  const lines = block.trim().split("\n");
-                  if (lines.length < 2) continue;
-                  const timeLine = lines.find(line => line.includes("-->"));
-                  if (!timeLine) continue;
-                  const [start, end] = timeLine.split(" --> ").map(parseTime);
-                  const text = lines.slice(lines.indexOf(timeLine) + 1).join("\n");
-                  if (!isNaN(start) && !isNaN(end)) {
-                    entries.push({ start, end, text });
+              fetch(`${SERVER}/subtitles/${id}`)
+                .then(res => res.ok ? res.json() : [])
+                .then(data => {
+                  if (!Array.isArray(data) || data.length === 0) {
+                    langSelect.style.display = "none";
+                    toggleBtn.style.display = "none";
+                    return;
                   }
-                }
-                return entries;
-              }
 
-              function parseTime(t) {
-                const parts = t.split(":");
-                if (parts.length === 3) {
-                  const h = parseInt(parts[0]);
-                  const m = parseInt(parts[1]);
-                  const s = parseFloat(parts[2]);
-                  return h * 3600 + m * 60 + s;
-                } else if (parts.length === 2) {
-                  const m = parseInt(parts[0]);
-                  const s = parseFloat(parts[1]);
-                  return m * 60 + s;
-                } else {
-                  return parseFloat(t);
-                }
-              }
+                  data.forEach(sub => {
+                    const option = document.createElement("option");
+                    option.value = sub.lang;
+                    option.textContent = sub.lang;
+                    langSelect.appendChild(option);
+                  });
 
-              video.addEventListener("timeupdate", () => {
-                if (!subtitleEnabled || subtitles.length === 0) {
-                  subtitleDiv.textContent = "";
-                  return;
-                }
-                const current = video.currentTime;
-                const active = subtitles.find(s => current >= s.start && current <= s.end);
-                subtitleDiv.textContent = active ? active.text : "";
-              });
+                  currentLang = data[0].lang;
+                  langSelect.value = currentLang;
+                  subtitles = data.find(s => s.lang === currentLang)?.lines || [];
 
-              if (Array.isArray(info.subtitles)) {
-                info.subtitles.forEach((sub, i) => {
-                  const opt = document.createElement("option");
-                  opt.value = sub.language;
-                  opt.textContent = sub.language;
-                  langSelect.appendChild(opt);
-                  if (i === 0) langSelect.value = sub.language;
+                  langSelect.addEventListener("change", () => {
+                    currentLang = langSelect.value;
+                    const selected = data.find(s => s.lang === currentLang);
+                    subtitles = selected ? selected.lines : [];
+                    subtitleDiv.textContent = "";
+                  });
+
+                  toggleBtn.addEventListener("click", () => {
+                    subtitleEnabled = !subtitleEnabled;
+                    subtitleDiv.style.display = subtitleEnabled ? "block" : "none";
+                    toggleBtn.textContent = subtitleEnabled ? "字幕オフ" : "字幕オン";
+                  });
+
+                  const video = document.getElementById("player");
+                  video.addEventListener("timeupdate", () => {
+                    if (!subtitleEnabled || subtitles.length === 0) return;
+                    const currentTime = video.currentTime;
+                    const current = subtitles.find(line =>
+                      currentTime >= line.start && currentTime <= line.end
+                    );
+                    subtitleDiv.textContent = current ? current.text : "";
+                  });
                 });
-
-                loadSubtitle(langSelect.value);
-
-                langSelect.addEventListener("change", () => {
-                  loadSubtitle(langSelect.value);
-                });
-
-                toggleBtn.addEventListener("click", () => {
-                  subtitleEnabled = !subtitleEnabled;
-                  toggleBtn.textContent = subtitleEnabled ? "字幕オフ" : "字幕オン";
-                  subtitleDiv.textContent = "";
-                });
-              }
-            })
-            .catch(() => {
-              const player = document.getElementById("player");
-              if (player) {
-                player.replaceWith(`<p class="error">Failed to load video file.</p>`);
-              }
             });
         }
       }
-    })
-    .catch(() => {
-      content.innerHTML = `<p class="error">error</p>`;
     });
 }
 
-function rewriteDescription(desc) {
-  const temp = document.createElement("div");
-  temp.innerHTML = desc;
-  const urls = temp.querySelectorAll("url");
-  urls.forEach(node => {
-    const parts = node.textContent.split("|");
-    const raw = parts[0]?.trim();
-    const text = parts[1]?.trim() || raw;
-    const encoded = encodeURIComponent(raw);
-    const a = document.createElement("a");
-    a.href = `redirect?url=${encoded}`;
-    a.textContent = text;
-    a.target = "_blank";
-    a.rel = "noopener";
-    node.replaceWith(a);
-  });
-  return temp.innerHTML;
-}
-
 function copyUrl() {
-  navigator.clipboard.writeText(location.href);
+  navigator.clipboard.writeText(location.href)
+    .then(() => alert("URL copied!"))
+    .catch(() => alert("Failed to copy URL."));
 }
 
 function copyCode() {
-  const url = `<iframe src="https://videos.bird.f5.si/embed?id=${id}" width="560" height="315" frameborder="0" allowfullscreen></iframe>`;
-  navigator.clipboard.writeText(url);
+  const embedCode = `<iframe src="${location.href}" width="640" height="360" frameborder="0" allowfullscreen></iframe>`;
+  navigator.clipboard.writeText(embedCode)
+    .then(() => alert("Embed code copied!"))
+    .catch(() => alert("Failed to copy embed code."));
+}
+
+function rewriteDescription(desc) {
+  return desc.replace(/</g, "&lt;").replace(/>/g, "&gt;");
 }
 </script>
 </body>
