--- a/watch.html
+++ b/watch.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Pikko Videos">
   <meta property="og:description" content="Let's watch the videos.">
   <meta property="og:url" content="https://videos.bird.f5.si">
-  <meta name="viewport" content="width=320,initial-scale=1">
+  <meta name="viewport" content="width=640,initial-scale=1">
   <script>const SERVER = "https://pikko1.tcpexposer.com";</script>
   <script src="https://unpkg.com/wavesurfer.js"></script>
   <script src="js/dark.js"></script>
@@ -33,14 +33,14 @@
 
     #videoWrapper {
       position: relative;
-      width: 320px;
-      height: 180px;
+      width: 640px;
+      height: 360px;
       margin-left: 0;
     }
 
     #player {
-      width: 320px;
-      height: 180px;
+      width: 640px;
+      height: 360px;
       background: black;
     }
 
@@ -260,9 +260,13 @@ if (!id) {
 
               document.addEventListener("fullscreenchange", () => {
                 if (document.fullscreenElement) {
+                  video.style.width = "100%";
+                  video.style.height = "100%";
                   subtitleDiv.style.fontSize = "2em";
                   subtitleDiv.style.bottom = "8%";
                 } else {
+                  video.style.width = "640px";
+                  video.style.height = "360px";
                   subtitleDiv.style.fontSize = "1.5em";
                   subtitleDiv.style.bottom = "5%";
                 }
