--- a/watch.html
+++ b/watch.html
@@ -30,17 +30,20 @@
     .author img {
       width: 40px; height: 40px; border-radius: 5px; margin-right: 8px; object-fit: cover;
     }
+
     #videoWrapper {
       position: relative;
       width: 640px;
       height: 360px;
       margin-left: 0;
     }
+
     #player {
       width: 640px;
       height: 360px;
       background: black;
     }
+
     .subtitle {
       position: absolute;
       bottom: 5%;
@@ -57,14 +60,22 @@
       box-sizing: border-box;
       white-space: pre-wrap;
     }
+
     .custom-controls {
-      margin-top: 10px;
+      position: absolute;
+      bottom: 5%;
+      left: 0;
+      width: 100%;
       display: flex;
       gap: 8px;
+      justify-content: center;
       align-items: center;
+      z-index: 20;
     }
+
     .custom-controls button,
-    .custom-controls select {
+    .custom-controls select,
+    .custom-controls input[type="range"] {
       font-size: 1em;
       padding: 0.4em 0.8em;
       border-radius: 4px;
@@ -73,8 +84,13 @@
       color: white;
       cursor: pointer;
     }
+
     .custom-controls button:hover {
       background: #09c;
+    }
+
+    #seekBar {
+      width: 120px;
     }
   </style>
 </head>
@@ -157,12 +173,13 @@ if (!id) {
           <div id="videoWrapper">
             <video id="player" autoplay playsinline></video>
             <div class="subtitle" id="subtitle"></div>
-          </div>
-          <div class="custom-controls">
-            <button id="playPauseBtn">▶️</button>
-            <button id="fullscreenBtn">⛶</button>
-            <button id="toggleSubtitle">字幕オフ</button>
-            <select id="subtitleLang"></select>
+            <div class="custom-controls" id="customControls">
+              <button id="playPauseBtn">▶️</button>
+              <button id="fullscreenBtn">⛶</button>
+              <button id="toggleSubtitle">字幕オフ</button>
+              <select id="subtitleLang"></select>
+              <input type="range" id="seekBar" min="0" max="100" value="0" step="0.1" />
+            </div>
           </div>
         `;
 
@@ -213,6 +230,7 @@ if (!id) {
               const subtitleDiv = document.getElementById("subtitle");
               const toggleBtn = document.getElementById("toggleSubtitle");
               const langSelect = document.getElementById("subtitleLang");
+              const seekBar = document.getElementById("seekBar");
               const videoWrapper = document.getElementById("videoWrapper");
 
               let subtitles = [];
@@ -250,6 +268,13 @@ if (!id) {
                 const current = video.currentTime;
                 const active = subtitles.find(s => current >= s.start && current <= s.end);
                 subtitleDiv.textContent = active ? active.text : "";
+
+                // ✅ シークバー更新
+                seekBar.value = (video.currentTime / video.duration) * 100;
+              });
+
+              seekBar.addEventListener("input", () => {
+                video.currentTime = (seekBar.value / 100) * video.duration;
               });
 
               document.addEventListener("fullscreenchange", () => {
@@ -258,11 +283,13 @@ if (!id) {
                   video.style.height = "100%";
                   subtitleDiv.style.fontSize = "2em";
                   subtitleDiv.style.bottom = "8%";
+                  document.getElementById("customControls").style.bottom = "3%";
                 } else {
                   video.style.width = "640px";
                   video.style.height = "360px";
                   subtitleDiv.style.fontSize = "1.5em";
                   subtitleDiv.style.bottom = "5%";
+                  document.getElementById("customControls").style.bottom = "5%";
                 }
               });
 
